--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "co": "^4.6.0",
     "heroku-cli-util": "^6.2.10",
     "openurl": "^1.1.0"
-  }
+  },
+  "files": [
+    "/index.js",
+    "/commands/postico"
+  ]
 }
